--- a/contato.html
+++ b/contato.html
@@ -21,7 +21,7 @@
                 <a href="index.html">Home</a>
                 <a href="fornecedor.html">Cadastro Fornecedores</a>
                 <a href="consumidor.html">Cadastro Consumidor</a>
-                <a href="servicos.html">Serviços</a>
+                <a href="servicos.php">Serviços</a>
                 <a class="active" href="contato.html">Contato</a>
                 <a href="login.html">Login</a>
             </div>
