--- a/fornecedor.html
+++ b/fornecedor.html
@@ -20,7 +20,7 @@
                 <a href="index.html">Home</a>
                 <a class="active" href="fornecedor.html">Cadastro Fornecedores</a>
                 <a href="consumidor.html">Cadastro Consumidor</a>
-                <a href="servicos.html">Serviços</a>
+                <a href="servicos.php">Serviços</a>
                 <a href="contato.html">Contato</a>
                 <a href="login.html">Login</a>
             </div>
@@ -38,10 +38,10 @@
                             <div id="title_form">
                                 <h1>Cadastro de Fornecedor</h1>
                             </div>
-                            <form id="form_cad" action="php/recebe_dados.php" method="post">
+                            <form id="form_cad" action="cadastro_fornecedor.php" method="post">
                                 <div id="f_div_1">
                                     <label for="nome">Nome/Razão Social</label><br>
-                                    <input class="box_form" style="width: 280px;" type="text" name="nome" id="nome"
+                                    <input class="box_form" style="width: 280px;" type="text" name="nome_for"
                                         required><br>
 
                                     <label for="cpf_cnpj">CPF/CNPJ</label><br>
@@ -50,34 +50,34 @@
                                     <label for="especialidade">Especialidade</label><br>
                                     <div style="float: left;">
                                         <div>
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox1"
+                                            <input class="form-check-input" type="checkbox" name="checkeletricista"
                                                 value="option1">
                                             <label class="form-check-label" for="inlineCheckbox1">Eletricista</label>
                                         </div>
                                         <div>
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox2"
+                                            <input class="form-check-input" type="checkbox" name="checkencanador"
                                                 value="option2">
                                             <label class="form-check-label" for="inlineCheckbox2">Encanador</label>
                                         </div>
                                         <div>
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox3"
+                                            <input class="form-check-input" type="checkbox" name="checkjardineiro"
                                                 value="option2">
                                             <label class="form-check-label" for="inlineCheckbox2">Jardineiro</label>
                                         </div>
                                     </div>
                                     <div style="float: right;">
                                         <div>
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox2"
+                                            <input class="form-check-input" type="checkbox" name="checklimpeza"
                                                 value="option2">
                                             <label class="form-check-label" for="inlineCheckbox2">Limpeza Geral</label>
                                         </div>
                                         <div>
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox2"
+                                            <input class="form-check-input" type="checkbox" name="checkpedreiro"
                                                 value="option2">
                                             <label class="form-check-label" for="inlineCheckbox2">Pedreiro</label>
                                         </div>
                                         <div>
-                                            <input class="form-check-input" type="checkbox" id="inlineCheckbox2"
+                                            <input class="form-check-input" type="checkbox" name="checkpintor"
                                                 value="option2">
                                             <label class="form-check-label" for="inlineCheckbox2">Pintor</label>
                                         </div>
@@ -90,32 +90,32 @@
 
                                 <div id="f_div_2">
                                     <label for="tel_1">Telefone 01</label><br>
-                                    <input class="box_form2" type="text" name="tel_01" id="tel_01" required><br>
+                                    <input class="box_form2" type="text" name="tel_01_for" id="tel_01_for" required><br>
 
                                     <label for="tel_02">Telefone 02</label><br>
-                                    <input class="box_form2" type="text" name="tel_02" id="tel_02"><br>
+                                    <input class="box_form2" type="text" name="tel_02_for" id="tel_02_for"><br>
 
                                     <label for="email">Email</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="text" name="email"
-                                        id="email" required><br>
+                                    <input class="box_form2" style="width: 280px;" type="text" name="email_for" id="email_for"
+                                        required><br>
 
                                     <label for="password1">Senha</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="password" name="password1"
-                                        id="password1" required><br>
+                                    <input class="box_form2" style="width: 280px;" type="password" name="password1_for"
+                                        id="password1_for" required><br>
 
                                     <label for="password2">Repita sua Senha</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="password" name="password2"
-                                        id="password2" required><br>
+                                    <input class="box_form2" style="width: 280px;" type="password" name="password2_for"
+                                        id="password2_for" required><br>
                                 </div>
                                 <div id="f_div_3">
                                     <label for="cep">CEP</label><br>
-                                    <input class="box_form2" type="text" name="cep" id="cep" required><br>
+                                    <input class="box_form2" type="text" name="cep_for" id="cep_for" required><br>
 
                                     <label for="num">Número</label><br>
-                                    <input class="box_form2" type="text" name="num" id="num" required><br>
+                                    <input class="box_form2" type="text" name="num_for" id="num_for" required><br>
 
                                     <label for="comp">Complemento</label><br>
-                                    <input class="box_form2" type="text" name="comp" id="comp"><br>
+                                    <input class="box_form2" type="text" name="comp_for" id="comp_for"><br>
 
                                     <label for="foto">Carregar uma foto:</label>
                                     <input type="file" id="foto" name="foto" accept="image/png, image/jpeg">
@@ -123,21 +123,23 @@
 
                                 <div id="f_div_4">
                                     <label for="bairro">Bairro</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="text" name="bairro"
-                                        id="bairro"><br>
+                                    <input class="box_form2" style="width: 280px;" type="text" name="bairro_for"
+                                        id="bairro_for"><br>
 
                                     <label for="cidade">Cidade</label><br>
-                                    <input class="box_form2" style="width: 280px;" type="text" name="cidade"
-                                        id="cidade"><br>
+                                    <input class="box_form2" style="width: 280px;" type="text" name="cidade_for"
+                                        id="cidade_for"><br>
 
                                     <label for="estado">Estado</label><br>
-                                    <input class="box_form2" type="text" name="estado" id="estado">
+                                    <input class="box_form2" type="text" name="estado_for" id="estado_for">
                                 </div>
                                 <div id="f_div_5">
-                                    <button style="height: 50px; width: 100px; border: solid 1px #b8b6b6;"
-                                        type="submit">
-                                        <span>ENVIAR</span>
-                                    </button>
+                                    
+                                        <button style="height: 50px; width: 100px; border: solid 1px #b8b6b6;"
+                                            type="submit">
+                                            <span>ENVIAR</span>
+                                        </button>
+                                    
                                 </div>
                             </form>
                             <div id="box_check">
