--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a class="active" href="index.html">Home</a>
                 <a href="fornecedor.html">Cadastro Fornecedores</a>
                 <a href="consumidor.html">Cadastro Consumidor</a>
-                <a href="servicos.html">Serviços</a>
+                <a href="servicos.php">Serviços</a>
                 <a href="contato.html">Contato</a>
                 <a href="login.html">Login</a>
             </div>
