--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
                 <a href="index.html">Home</a>
                 <a href="fornecedor.html">Cadastro Fornecedores</a>
                 <a href="consumidor.html">Cadastro Consumidor</a>
-                <a href="servicos.html">Serviços</a>
+                <a href="servicos.php">Serviços</a>
                 <a href="contato.html">Contato</a>
                 <a class="active" href="login.html">Login</a>
             </div>
@@ -36,7 +36,7 @@
                         <hr>
                     </div>
                     
-                    <form id="signup-form" onsubmit="return false;">                        
+                    <form id="signup-form" action="login_consumidor.php" method="POST">                        
                         <div class="form-label-group">
                             <input type="email" class="form-control" id="email" required="" name="email"
                                 placeholder="E-MAIL">
