--- a/perfil.html
+++ b/perfil.html
@@ -18,7 +18,7 @@
                 </a>
             </div>
             <div class="topnav">
-                <a href="index.html">Home</a>
+                <a href="paginaInicial.html">Home</a>
                 <a href="fornecedor.html">Cadastro Fornecedores</a>
                 <a href="consumidor.html">Cadastro Consumidor</a>
                 <a href="servicos.html">Serviços</a>
@@ -135,43 +135,43 @@
                                     Atualizar Dados Cadastrados</h5>
                             </div>
                             <div style="width: 100%; height: 80%; float: left; margin: 10px 0px 0px 5px;">
-                                <form>
+                                <form action="alter_cadastro.php" method="GET">
                                     <label for="">Nome</label><br>
-                                    <input type="text" name="nome" id="nome"><br>
-                                    <label for="">Data de Nascimento</label><br>
-                                    <input type="date" name="data" id="data" placeholder="dd-mm-aaaa"><br>
-                                    <label for="">Sexo</label><br>
-                                    <input class="changeWidth" type="radio" id="sexo" name="sexo" value="masculino">
-                                    <label for="masculino">Masculino</label>
-                                    <input class="changeWidth" type="radio" id="sexo" name="sexo" value="feminino">
-                                    <label for="feminino">Feminino</label><br>
-                                    <label for="">RG</label><br>
-                                    <input type="text" name="rg" id="rg"><br>
-                                    <label for="">CPF</label><br>
+                                    <input type="text" name="nome" id="nome"><br> 
+                                    <label for="">CPF</label><br>                                       
                                     <input type="text" name="cpf" id="cpf"><br>
                                     <label for="">Email</label><br>
-                                    <input type="email" name="email" id="email" placeholder="user@example.com"><br><br>
+                                    <input type="email" name="email" id="email" placeholder="user@example.com"> <br>                                   
+                                    <label for="">Senha</label><br>                                       
+                                    <input type="password" name="password1" id="password1"><br>
+                                    <label for="">Repita Senha</label><br>                                       
+                                    <input type="password" name="password2" id="password2"><br>
+                                    <label for="">Telefone</label><br>                                       
+                                    <input type="text" name="tel_01" id="tel_01"><br>                           
+                                    <br><br>
 
                                     <fieldset>
                                         <legend>Dados de Endereço:</legend>
-                                        <div id="fieldset_A">
-                                            <label for="rua">Rua:</label>
-                                            <input type="text" id="rua" name="rua"><br>
+                                        <div id="fieldset_A">   
+                                            <label for="cep">CEP:</label>
+                                            <input type="text" id="cep" name="cep"><br>                                         
                                             <label for="numero">Número:</label>
-                                            <input type="text" id="numero" name="numero"><br>
+                                            <input type="text" id="num" name="num"><br>
                                             <label for="complemento">Complemento:</label>
-                                            <input type="text" id="complemento" name="complemento"><br>
+                                            <input type="text" id="comp" name="comp"><br>
                                         </div>
                                         <div id="fieldset_B">
-                                            <label for="cep">CEP:</label>
-                                            <input type="text" id="cep" name="cep"><br>
+                                            <label for="bairro">Bairro:</label>
+                                            <input type="text" id="bairro" name="bairro"><br>                                            
                                             <label for="cidade">Cidade:</label>
                                             <input type="text" id="cidade" name="cidade"><br>
                                             <label for="estado">Estado:</label>
                                             <input type="text" id="estado" name="estado"><br>
                                         </div>
                                     </fieldset> <br>
-                                    <input class="submit" type="submit" value="Enviar">
+                                  
+                                       <input type="submit" name="submit" id="submit" value="coco">
+                                 
 
 
                                 </form>
